完成了对图表的支持

--- a/demo/文档/使用指南.md
+++ b/demo/文档/使用指南.md
@@ -6,11 +6,12 @@
 2. [安装配置](#安装配置)
 3. [基本使用](#基本使用)
 4. [高级功能](#高级功能)
-5. [命令行选项](#命令行选项)
-6. [API使用](#api使用)
-7. [主题定制](#主题定制)
-8. [故障排除](#故障排除)
-9. [最佳实践](#最佳实践)
+5. [图表转换](#图表转换)
+6. [命令行选项](#命令行选项)
+7. [API使用](#api使用)
+8. [主题定制](#主题定制)
+9. [故障排除](#故障排除)
+10. [最佳实践](#最佳实践)
 
 ## 🚀 快速开始
 
@@ -24,6 +25,9 @@ python main.py data.csv --html output.html
 
 # 使用特定主题
 python main.py data.xlsx --html output.html --theme dark
+
+# 启用图表转换
+python main.py data.xlsx --html output.html --enable-charts
 ```
 
 ### 批量处理
@@ -71,7 +75,7 @@ python main.py --help
 
 | 格式 | 扩展名 | 支持级别 | 说明 |
 |------|--------|----------|------|
-| Excel 2007+ | .xlsx, .xlsm, .xltx, .xltm | 完全支持 | 现代Excel格式 |
+| Excel 2007+ | .xlsx, .xlsm, .xltx, .xltm | 完全支持 | 现代Excel格式，支持图表转换 |
 | Excel 97-2003 | .xls, .xlt | 基础支持 | 传统Excel格式 |
 | Excel 二进制 | .xlsb | 基础支持 | 二进制Excel格式 |
 | CSV | .csv | 完全支持 | 通用表格格式 |
@@ -151,6 +155,129 @@ python main.py complex_data.xlsx --html output.html
 - 大小限制检查
 - 恶意内容过滤
 
+## 📊 图表转换
+
+### 概述
+MCP-Sheet-Parser支持将Excel中的图表转换为SVG矢量图形，提供高质量的图表展示功能。
+
+### 支持的图表类型
+
+| 图表类型 | 描述 | 适用场景 |
+|----------|------|----------|
+| 柱状图 (Column) | 垂直柱状图 | 分类数据对比 |
+| 条形图 (Bar) | 水平条形图 | 分类数据对比 |
+| 折线图 (Line) | 连续数据趋势 | 时间序列数据 |
+| 饼图 (Pie) | 占比展示 | 比例数据 |
+| 面积图 (Area) | 填充区域图 | 趋势和占比 |
+| 散点图 (Scatter) | 相关性分析 | 两个变量关系 |
+| 组合图 (Combo) | 多种图表组合 | 复杂数据展示 |
+
+### 图表转换功能
+
+#### 基本使用
+```bash
+# 启用图表转换
+python main.py data.xlsx --html output.html --enable-charts
+
+# 指定图表质量
+python main.py data.xlsx --html output.html --enable-charts --chart-quality high
+
+# 指定图表主题
+python main.py data.xlsx --html output.html --enable-charts --chart-theme business
+```
+
+#### 图表配置选项
+- `--enable-charts`: 启用图表转换功能
+- `--chart-quality {low,medium,high}`: 设置图表质量
+- `--chart-theme {default,business,modern,colorful}`: 设置图表配色主题
+- `--chart-width <像素>`: 设置图表宽度
+- `--chart-height <像素>`: 设置图表高度
+- `--chart-format {svg,png}`: 设置图表输出格式
+
+### 图表样式特性
+
+#### 配色方案
+- **default**: 默认配色，适合一般用途
+- **business**: 商务配色，适合正式场合
+- **modern**: 现代配色，适合时尚展示
+- **colorful**: 多彩配色，适合创意展示
+
+#### 图表元素
+- ✅ 图表标题和副标题
+- ✅ 坐标轴标签和标题
+- ✅ 图例位置和样式
+- ✅ 数据标签和数值
+- ✅ 网格线和背景
+- ✅ 数据系列颜色
+
+#### 交互功能
+- ✅ 响应式设计，自动适配屏幕
+- ✅ 工具提示显示详细数据
+- ✅ 缩放和平移支持
+- ✅ 动画效果（可选）
+
+### 图表转换示例
+
+#### 创建包含图表的Excel文件
+```python
+import openpyxl
+from openpyxl.chart import BarChart, PieChart, LineChart, Reference
+
+# 创建工作簿
+wb = openpyxl.Workbook()
+ws = wb.active
+
+# 添加数据
+data = [
+    ["季度", "产品A", "产品B", "产品C"],
+    ["Q1", 120, 100, 80],
+    ["Q2", 150, 130, 110],
+    ["Q3", 180, 160, 140],
+    ["Q4", 200, 170, 150]
+]
+
+for row in data:
+    ws.append(row)
+
+# 创建柱状图
+chart = BarChart()
+chart.title = "季度销售业绩对比"
+chart.x_axis.title = "季度"
+chart.y_axis.title = "销售额(万元)"
+
+data = Reference(ws, min_col=2, min_row=1, max_col=4, max_row=5)
+cats = Reference(ws, min_col=1, min_row=2, max_row=5)
+chart.add_data(data, titles_from_data=True)
+chart.set_categories(cats)
+
+ws.add_chart(chart, "A7")
+wb.save("sales_data.xlsx")
+```
+
+#### 转换图表为HTML
+```bash
+# 转换包含图表的Excel文件
+python main.py sales_data.xlsx --html sales_report.html --enable-charts --chart-quality high
+```
+
+### 图表最佳实践
+
+#### 数据准备
+1. **数据格式**: 确保数据格式正确，标题行清晰
+2. **数据范围**: 选择合适的数据范围，避免空行空列
+3. **数据类型**: 数值列使用数字格式，文本列使用文本格式
+
+#### 图表设计
+1. **标题简洁**: 使用简洁明了的图表标题
+2. **颜色搭配**: 选择合适的配色方案
+3. **标签清晰**: 确保坐标轴标签和数据标签清晰可读
+4. **图例位置**: 合理放置图例，避免遮挡数据
+
+#### 输出优化
+1. **质量选择**: 根据用途选择合适的质量级别
+2. **尺寸设置**: 根据展示环境设置合适的图表尺寸
+3. **格式选择**: 网页展示推荐使用SVG格式
+
 ## ⚙️ 命令行选项
 
 ### 完整选项列表
@@ -170,6 +297,17 @@ python main.py [选项] <输入文件>
   --info                显示文件信息
   --list-themes         列出所有可用主题
   --version             显示版本信息
+  
+图表转换选项:
+  --enable-charts       启用图表转换功能
+  --chart-quality {low,medium,high}
+                        设置图表质量
+  --chart-theme {default,business,modern,colorful}
+                        设置图表配色主题
+  --chart-width <像素>  设置图表宽度
+  --chart-height <像素> 设置图表高度
+  --chart-format {svg,png}
+                        设置图表输出格式
 ```
 
 ### 选项详解
@@ -225,6 +363,7 @@ with open('output.html', 'w', encoding='utf-8') as f:
 ```python
 from mcp_sheet_parser.file_processor import FileProcessor
 from mcp_sheet_parser.config import Config
+from mcp_sheet_parser.chart_converter import ChartConverter
 
 # 创建配置
 config = Config()
@@ -245,6 +384,15 @@ result = processor.process_file(
 if result['success']:
     print(f"转换成功: {result['output_path']}")
     print(f"处理时间: {result['processing_time']:.2f} 秒")
+
+# 图表转换API
+chart_converter = ChartConverter()
+charts = chart_converter.detect_charts_in_excel('data.xlsx')
+
+for i, chart in enumerate(charts):
+    svg_content = chart_converter.generate_svg(chart)
+    with open(f'chart_{i}.svg', 'w', encoding='utf-8') as f:
+        f.write(svg_content)
 ```
 
 ### 配置选项
